Food menu non-grid mobile spacing fix

--- a/src/less/archive-foodCategory.module.less
+++ b/src/less/archive-foodCategory.module.less
@@ -28,6 +28,12 @@
 
 .foodItem {
   .hide; .fs(@p);
+
+  @supports not (display: grid) {
+    & + .foodItem {
+      .mt(@m);
+    }
+  }
 }
 
 .activeFoodItem {
